[gd_scene load_steps=4 format=3 uid="uid://bf0jmi4bp0ets"]

[ext_resource type="Script" uid="uid://dvv3muyo8ak01" path="res://Inventory/shop_ui.gd" id="1_7cd5r"]
[ext_resource type="Texture2D" uid="uid://beenrn7abo8ih" path="res://Textures/UI/ui_close.png" id="2_7e0fl"]
[ext_resource type="Texture2D" uid="uid://cpa3cmft3vsly" path="res://icon.svg" id="2_nw8tv"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cd5r")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -253.5
offset_right = 490.0
offset_bottom = 253.5
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="Panel"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 2

[node name="ItemsContainer" type="Control" parent="Panel/HBox"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="Panel/HBox/ItemsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="NothingToSell" type="Label" parent="Panel/HBox/ItemsContainer/Margin"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "{name} has nothing to sell"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/ItemsContainer/Margin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SwitchButton" type="Button" parent="Panel/HBox/ItemsContainer/Margin/VBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Buying"

[node name="Scroll" type="ScrollContainer" parent="Panel/HBox/ItemsContainer/Margin/VBox"]
custom_minimum_size = Vector2(300, 290)
layout_mode = 2
size_flags_vertical = 3

[node name="SlotParent" type="GridContainer" parent="Panel/HBox/ItemsContainer/Margin/VBox/Scroll"]
layout_mode = 2
columns = 10

[node name="HBox2" type="HBoxContainer" parent="Panel/HBox/ItemsContainer/Margin/VBox"]
layout_mode = 2

[node name="PGold" type="Label" parent="Panel/HBox/ItemsContainer/Margin/VBox/HBox2"]
layout_mode = 2
size_flags_vertical = 8
text = "NaN"

[node name="Label6" type="Label" parent="Panel/HBox/ItemsContainer/Margin/VBox/HBox2"]
layout_mode = 2
size_flags_vertical = 8
text = "Gold"

[node name="NpcInfo" type="Control" parent="Panel/HBox"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="Panel/HBox/NpcInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel/HBox/NpcInfo/Margin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Exit" type="Button" parent="Panel/HBox/NpcInfo/Margin/VBox"]
modulate = Color(1, 0.428979, 0.412149, 1)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
icon = ExtResource("2_7e0fl")
icon_alignment = 1
expand_icon = true

[node name="NpcImg" type="TextureRect" parent="Panel/HBox/NpcInfo/Margin/VBox"]
custom_minimum_size = Vector2(128, 165)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_nw8tv")

[node name="NpcName" type="Label" parent="Panel/HBox/NpcInfo/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0
text = "npc_name"
horizontal_alignment = 1

[node name="NpcRelation" type="Label" parent="Panel/HBox/NpcInfo/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Relation: NaN"
horizontal_alignment = 1

[node name="Discount" type="Label" parent="Panel/HBox/NpcInfo/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Discount: 0%"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="Panel/HBox/NpcInfo/Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="NGold" type="Label" parent="Panel/HBox/NpcInfo/Margin/HBox"]
layout_mode = 2
size_flags_vertical = 0
text = "NaN"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Panel/HBox/NpcInfo/Margin/HBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Gold"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/HBox/ItemsContainer/Margin/VBox/SwitchButton" to="." method="_on_switch_button_pressed"]
[connection signal="pressed" from="Panel/HBox/NpcInfo/Margin/VBox/Exit" to="." method="_on_exit_pressed"]
